# libmorse

./: .gitignore  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile.am  README.md  bootstrap  configure.ac
src/: Makefile.am  buildtree.c  data.c  data.h  main.c  morse.c  morse.h  morse_h.m4  morse_parser.h  morsetree.h  tables.c  tables.h
test/: morse.c
